docker/rocm-mi308x-vllm-pd/yamls/decode-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vllm-decode
  namespace: kube-system
  labels:
    app: vllm-pd
    role: decode
spec:
  hostNetwork: true
  nodeName: node-21.234.170.32
  restartPolicy: Never
  containers:
    - name: vllm-decode
      image: mirrors.tencent.com/ti-platform/vllm-glm52-308x-pd:latest
      imagePullPolicy: Always
      securityContext:
        privileged: true
        capabilities:
          add: ["SYS_PTRACE"]
          drop: ["ALL"]
        seccompProfile:
          type: Unconfined
      ports:
        - name: http
          containerPort: 13000
          hostPort: 13000
      volumeMounts:
        - name: data
          mountPath: /data
        - name: dev-kfd
          mountPath: /dev/kfd
        - name: dev-dri
          mountPath: /dev/dri
        - name: ib
          mountPath: /dev/infiniband
        - name: shm
          mountPath: /dev/shm
        - name: sys
          mountPath: /sys
  volumes:
    - name: data
      hostPath:
        path: /data
        type: Directory
    - name: dev-kfd
      hostPath:
        path: /dev/kfd
        type: CharDevice
    - name: dev-dri
      hostPath:
        path: /dev/dri
        type: Directory
    - name: ib
      hostPath:
        path: /dev/infiniband
        type: Directory
    - name: shm
      emptyDir:
        medium: Memory
        sizeLimit: 256Gi
    - name: sys
      hostPath:
        path: /sys
        type: Directory
